tests/fixtures/errors/if_cond_not_bool.ore
fn main
  if 42
    print "yes"
